--- a/src/app/modal/modal-add-box/modal-add-box.component.html
+++ b/src/app/modal/modal-add-box/modal-add-box.component.html
@@ -1,14 +1,8 @@
 <mat-dialog-content name="mat-dialog-content" class="mat-typography">
   <div name="divOnRow" class="row">
-    <div name="divOnCol" class="col-12">
-      <form name="formInput" class="example-form">
-        <mat-form-field name="mat-form-field" class="example-full-width">
-          <span name="spanText" matPrefix>รหัสพัสดุ &nbsp;</span>
-          <input type="tel" [(ngModel)]="trackno" name="keyTel" matInput>
-        </mat-form-field>
-      </form>
-    </div>
+    
     <div *ngIf="dataLabel && dataLabel.customer " class="col-12" name="divAddressCustomer">
+      <p>ชื่อ-ที่อยู่จัดส่ง</p>
       <p name="nameCustomer">{{dataLabel.customer.firstname}} {{dataLabel.customer.lastname}}</p>
       <p name="addressCustomer">{{dataLabel.customer.address.houseno}}
         {{dataLabel.customer.address.village}} {{dataLabel.customer.address.street}}
@@ -16,6 +10,7 @@
         {{dataLabel.customer.address.province}}
         {{dataLabel.customer.address.zipcode}}</p>
     </div>
+    
     <div *ngIf="dataLabel && dataLabel.productall" name="divHaveBorderAroud" class="col-12 border-around "
       style="height: 200px;">
       <div name="divForDetailProduct" class="row mt-3" *ngFor="let item of dataLabel.productall ;let i = index;">
@@ -36,6 +31,15 @@
           </form>
         </div>
       </div>
+    </div>
+
+    <div name="divOnCol" class="col-12 mt-3">
+      <form name="formInput" class="example-form">
+        <mat-form-field name="mat-form-field" class="example-full-width">
+          <input type="tel" [(ngModel)]="trackno" name="keyTel" matInput placeholder="กรุณากรอกเลขที่พัสดุ">
+        </mat-form-field>
+        
+      </form>
     </div>
   </div>
 </mat-dialog-content>
