--- a/src/app/modal/modal-confirms/modal-confirms.component.html
+++ b/src/app/modal/modal-confirms/modal-confirms.component.html
@@ -12,11 +12,11 @@
  
 <div name="divRowbtn" class="row mt-3">
   <div name="divColButtonCancel" class="col-6 text-left">
-    <button class="ml-4" name="btnCancel" mat-stroked-button color="accent" (click)="onClickCancel()">ยกเลิก</button>
+    <button class="ml-4" name="btnCancel" mat-stroked-button color="accent" (click)="onClickCancel()">ไม่ใช่</button>
   </div>
   <div name="divColButtonConfirm" class="col-6 text-right ">
     <button class="mr-4 border-btn" name="btnConfrim" mat-stroked-button color="accent"
-      (click)="onClickOk()">ตกลง</button>
+      (click)="onClickOk()">ใช่</button>
   </div>
 
 </div>
