--- a/src/app/pages/manage-member/manage-member.component.html
+++ b/src/app/pages/manage-member/manage-member.component.html
@@ -30,7 +30,7 @@
                   </div>
                   <div class="col-12 col-md-6 no-padding" name="colBtnForOwner2">
                     <button style="width: 100%" mat-button color="accent" (click)="approve(item)"
-                      name="btnApprove">อนุมัติ</button>
+                      id="btnApprove-{{item.firstname}}">อนุมัติ</button>
                   </div>
                 </div>
               </mat-card>
@@ -41,7 +41,7 @@
             <div class="col-6 col-sm-6 col-md-3 col-lg-3" name="colUserWaitApprove">
               <mat-card class="example-card mt-2" name="cardUserWaitApprove">
                 <mat-card-content name="cardContentUserWaitApprove">
-                  <p class="ellipsis" *ngIf="dataUserID && dataUserID.displayname" name="textUserWaitApprove">
+                  <p class="ellipsis" *ngIf="dataUserID && dataUserID.displayname" id="textUserWaitApprove-{{dataUserID.firstname}}">
                     {{dataUserID.displayname}}</p>
                 </mat-card-content>
               </mat-card>
