--- a/src/app/modal/select-option/select-option.component.html
+++ b/src/app/modal/select-option/select-option.component.html
@@ -28,7 +28,9 @@
             </mat-card>
           </div>
         </div>
+        <div class="row">
 
+          </div>
       </form>
     </mat-dialog-content>
     <mat-dialog-actions name="mat-dialog-actions-first" align="end">
@@ -93,16 +95,18 @@
               </mat-card-content>
               <div class="row">
                 <div name="colIcon" class="col-12 text-center col-md-12">
-                  <h3 style="color:green">จำนวน {{itm.qty}} ชิ้น</h3>
+                  <h3 style="color:green">จำนวน {{itm.qty | number}} ชิ้น</h3>
                 </div>
-                
+
               </div>
 
             </mat-card>
           </div>
         </div>
 
-        
+        <div class="row">
+
+        </div>
       </form>
     </mat-dialog-content>
     <mat-dialog-actions name="mat-dialog-actions-third">
