--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -1,6 +1,6 @@
 <div class="div-content" name="bigDivInPageOrder-list">
   <div class="row" name="divRowInPageOrder-list">
-    <div name="divAddOrder" class="col-12 col-sm-12 col-md-3 mt-3 list-style list-add">
+    <div name="divAddOrder" class="col-12 col-sm-12 col-md-3 mt-3 list-style list-add ">
       <div name="divClickOpenModal" class="col-12 text-center pr-0 pl-0 div-add-btn" (click)="openmodal()">
         <span name="spanIconAdd" class="btn-add-style cursor">
           <p name="iconAdd" class="mb-0" style="margin-top: -5px">+</p>
@@ -10,7 +10,7 @@
       </div>
     </div>
 
-    <div name="divDataOrder" class="col-6 col-sm-6 col-md-3 mt-3 list-style" style="width: 100%"
+    <div name="divDataOrder" class="col-6 col-sm-6 col-md-3 mt-3 list-style princing-item" style="width: 100%"
       *ngFor="let item of dataOrderAll">
       <div name="divInNgfor" class="col-12 border-list  pr-0 pl-0 bg-white">
         <p class="mb-1 text-overflow mt-2 ml-3" name="item.orderno"><span>ออเดอร์: </span> <span
