--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -58,7 +58,7 @@
                 <span class="font-color" style="font-size: 13px" name="it.name">เบอร์ {{it.name}}</span>
               </div>
               <div class="col-8  text-right" name="ColSumOption"><span class="font-color pr-5" style="font-size: 13px"
-                  name="it.qty">{{it.qty}}</span> 
+                  name="it.qty">{{it.qty | number}}</span> 
                   <!-- <span class="font-color" name="mutiplePrice"> * </span>
                 <span style="font-size: 13px" class="font-color" name="item.price">{{item.price | number}}</span> -->
               </div>
