--- a/src/app/pages/manage-member/manage-member.component.html
+++ b/src/app/pages/manage-member/manage-member.component.html
@@ -67,13 +67,13 @@
           </div>
         </div>
       </mat-tab>
-      <mat-tab label="สรุปยอดขาย" dynamicHeight>
+      <!-- <mat-tab label="สรุปยอดขาย" dynamicHeight>
         <div class="row">
           <div class="col-12">
             <chart [type]="typeChart" [data]="dataChart" [options]="optionsChart" style="height: 300px;"></chart>
           </div>
         </div>
-      </mat-tab>
+      </mat-tab> -->
     </mat-tab-group>
   </div>
 </div>
