--- a/src/app/modal/modal-address/modal-address.component.html
+++ b/src/app/modal/modal-address/modal-address.component.html
@@ -39,22 +39,22 @@
           </div>
           <div name="divColHousenoCustomer" class="col-12 col-md-6">
             <mat-form-field name="mat-form-field-houseno" class="example-full-width">
-              <input matInput placeholder="กรุณากรอกบ้านเลขที่" name="inputKeyHouseno"
+              <input matInput placeholder="กรุณากรอกที่อยู่" name="inputKeyHouseno"
                 [(ngModel)]="data.address.houseno" formControlName="houseno" required>
             </mat-form-field>
           </div>
-          <div class="col-12 col-md-6" name="divColVillage">
+          <!-- <div class="col-12 col-md-6" name="divColVillage">
             <mat-form-field class="example-full-width" name="mat-form-field-village">
               <input matInput placeholder="กรุณากรอกหมู่บ้าน" name="inputKeyVillage" [(ngModel)]="data.address.village"
                 formControlName="village">
             </mat-form-field>
-          </div>
-          <div class="col-12 col-md-6" name="divColStreet">
+          </div> -->
+          <!-- <div class="col-12 col-md-6" name="divColStreet">
             <mat-form-field class="example-full-width" name="mat-form-field-street">
               <input matInput placeholder="กรุณากรอกถนน/ซอย" name="inputKeyStreet" [(ngModel)]="data.address.street"
                 formControlName="street">
             </mat-form-field>
-          </div>
+          </div> -->
           <div class="col-12 col-md-6" name="divColSubdistrict">
             <mat-form-field class="example-full-width" name="mat-form-field-subdistrict">
               <input matInput placeholder="กรุณากรอกตำบล" name="inputKeySubdistrict"
