--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -12,7 +12,7 @@
 
     <div name="divDataOrder" class="col-6 col-sm-6 col-md-3 mt-3 list-style princing-item" style="width: 100%"
       *ngFor="let item of dataOrderAll">
-      <div name="divInNgfor" class="col-12 border-list  pr-0 pl-0 bg-white">
+      <div name="divInNgfor" class="col-12 border-list  pr-0 pl-0 bg-white border-prod">
         <p class="mb-1 text-overflow mt-2 ml-3" name="item.orderno"><span>ออเดอร์: </span> <span
             class="color-oder">{{item.orderno}}</span></p>
         <p class="mb-1 text-overflow ml-3" name="item.customer.firstname"><span>ชื่อ: </span> <span
