--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -3,10 +3,9 @@
     <div name="divAddOrder" class="col-12 col-sm-12 col-md-3 mt-3 list-style list-add ">
       <div name="divClickOpenModal" class="col-12 text-center pr-0 pl-0 div-add-btn" (click)="openmodal()">
         <span name="spanIconAdd" class="btn-add-style cursor">
-          <p name="iconAdd" class="mb-0" style="margin-top: -5px">+</p>
+          <p name="iconAdd"  style="margin-top: -5px">+</p>
         </span>
-        <p>เพิ่มรายการขาย</p>
-        
+        <p class="mt-3 ml-3">คลิ๊ก เพิ่มใบสั่งซื้อ</p>
       </div>
     </div>
 
