--- a/src/app/pages/order-list/order-list.component.scss
+++ b/src/app/pages/order-list/order-list.component.scss
@@ -3,6 +3,10 @@
     color: #ff4081;
 }
 
+.font-10{
+    font-size: 10px;
+}
+
 .div-add-btn {
     border: dashed 5px #e2e2e2;
     height: 154px !important;
