--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -115,7 +115,7 @@
     <div class="row mb-3" name="rowBtn">
       <div class="col-6" name="colBtnCancel">
         <button mat-stroked-button color="accent" class="btn-style" (click)="onCancel()"
-          name="btnCancel">ออก</button>
+          name="btnCancel">ยกเลิกการทำรายการ</button>
       </div>
       <div class="col-6" name="colBtnSave">
         <button mat-stroked-button color="accent" (click)="onSave()" class="btn-style btn-border-style"
