--- a/src/app/modal/modal-address/modal-address.component.html
+++ b/src/app/modal/modal-address/modal-address.component.html
@@ -6,7 +6,7 @@
         <div class="row mt-3" name="divRowDetailCustomer">
           <div class="col-12 col-md-6" name="divColKeyTel">
             <mat-form-field class="example-full-width" name="mat-form-field-keyTel">
-              <input name="inputkeyTel" matInput type="tel" maxlength="10" placeholder="กรุณากรอกเบอร์โทร"
+              <input name="inputkeyTel" matInput myNumberOnly maxlength="10" placeholder="กรุณากรอกเบอร์โทร"
                 [(ngModel)]="data.tel" formControlName="tel" required>
             </mat-form-field>
           </div>
@@ -76,7 +76,7 @@
           <div class="col-12 col-md-6" name="divColZipcode">
             <mat-form-field class="example-full-width" name="mat-form-field-zipcode">
               <input matInput placeholder="กรุณากรอกรหัสไปรษณีย์" name="inputKeyZipcode"
-                [(ngModel)]="data.address.zipcode" formControlName="zipcode" required>
+                [(ngModel)]="data.address.zipcode" formControlName="zipcode" maxlength="5" myNumberOnly required>
             </mat-form-field>
           </div>
         </div>
