--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -107,7 +107,7 @@
             บาท</span>
         </p> -->
         <mat-form-field class="example-full-width text-right" name="mat-form-field-district">
-            <input matInput type="number" placeholder="กรุณากรอกจำนวนเงินรวม" [(ngModel)]="data.totalamount"required>
+            <input matInput myNumberOnly placeholder="กรุณากรอกจำนวนเงินรวม" [(ngModel)]="data.totalamount"required>
           </mat-form-field>
       </div>
     </div>
