--- a/src/app/pages/order-list/order-list.component.scss
+++ b/src/app/pages/order-list/order-list.component.scss
@@ -99,7 +99,7 @@
 }
 
 .border-prod:hover {
-    border: solid 1px rgb(0, 0, 160);
+    border: solid 1px #ff4081;
     border-top-left-radius: 5%;
     border-top-right-radius: 5%;
     border-bottom-left-radius: 5%;
