--- a/src/app/pages/own-dashboad/own-dashboad.component.html
+++ b/src/app/pages/own-dashboad/own-dashboad.component.html
@@ -68,11 +68,11 @@
 
                 <div class="row">
                   <div class="col-6 text-center">
-                    <button style="width: 100%" mat-button color="accent" (click)="cancel(item)"
+                    <button style="width: 100%" mat-button color="accent" 
                       name="btnReject">ไม่อนุมัติ</button>
                   </div>
                   <div class="col-6 text-center">
-                    <button style="width: 100%" mat-button color="primary" (click)="approve(item)">อนุมัติ</button>
+                    <button style="width: 100%" mat-button color="primary">อนุมัติ</button>
                   </div>
                 </div>
               </mat-card-actions>
@@ -93,11 +93,11 @@
   
                   <div class="row">
                     <div class="col-6 text-center">
-                      <button style="width: 100%" mat-button color="accent" (click)="cancel(item)"
+                      <button style="width: 100%" mat-button color="accent" 
                         name="btnReject">ไม่อนุมัติ</button>
                     </div>
                     <div class="col-6 text-center">
-                      <button style="width: 100%" mat-button color="primary" (click)="approve(item)">อนุมัติ</button>
+                      <button style="width: 100%" mat-button color="primary" >อนุมัติ</button>
                     </div>
                   </div>
                 </mat-card-actions>
